Fix calendar header spacing

--- a/app/assets/stylesheets/styles/calendar.scss
+++ b/app/assets/stylesheets/styles/calendar.scss
@@ -1,7 +1,3 @@
-.cal {
-  
-}
-
 .cal-row {
   width: 100%;
 }
